# backend-petshop

./: .gitignore  Aptfile  Dockerfile  GFP Petshop.postman_collection.json  Procfile  app.py  generate_secret_key.py  jwt-test.py  pyproject.toml  requirements.txt
connectors/: config.py  db.py
controllers/: CartController.py  CheckoutOrderController.py  FileUploadController.py  LoginController.py  OrderController.py  ProductController.py  PromotionController.py  RegisterController.py  ReviewController.py  SellerController.py  UserController.py  WishlistController.py
middlewares/: seller_required.py
migrations/versions/: 1fe2298b43c2_user_data.py  3948ad8f51fa_add_seller_table.py  46a43f993daa_add_productimage_table_and_relationship_.py  6e24c2bd4d83_add_dimensions_and_weight_columns_to_.py  7b24f6bc33e6_initial_migration.py  89f88b1e64ce_add_expires_at_column_to_otp_model.py  a6d57446ffd2_add_updated_at_to_promotions.py  a901e0395c61_add_domain_and_address_to_stores.py  cd5205fd5569_add_foreign_keys_to_carts.py  d6701281e218_make_product_id_nullable_in_promotions.py  e789a730b858_remove_nama_column_from_users.py  ecd02bbf7de6_fix_backref_conflict_in_user_and_store_.py  (+3 more)
models/: __init__.py  address.py  bank.py  cart.py  order.py  order_item.py  otp.py  product.py  product_image.py  promotion.py  promotion_usage.py  review.py  store.py  user.py  wishlist.py
routes/: __init__.py  auth_routes.py  cart_routes.py  file_upload_routes.py  order.py  product_routes.py  promotion_routes.py  review_routes.py  seller_routes.py  user_routes.py  wishlist_routes.py
(+1 files in other folders)
