[tool.poetry]
name = "tim f back end"
version = "0.1.0"
description = ""
authors = ["cicely maseya sugiharto <maseyacicely@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
mysql = "^0.0.3"
mysql-connector-python = "^9.1.0"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
